Изменение файла с клиентами под разные размеры

--- a/client.html
+++ b/client.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="build/style.css">
-    <title>Client</title>
+    <title>Document</title>
 </head>
 
 <body>
-    <div class="main__wrapper">
-        <header class="main__header">
+    <div class="wrapper">
+        <div class="header__section">
             <div class="header__logo">
                 <div class="burger__menu">
                     <div class="line"></div>
@@ -36,8 +36,8 @@
                         height="50px">
                 </div>
             </nav>
-        </header>
-        <div class="content">
+        </div>
+        <div class="main__information">
             <section class="left__nav">
                 <ul>
                     <li><a href="#" class="nav__client">Клиенты</a></li>
