--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <input type="email" placeholder="Введите ваш email" class="email">
                 <input type="password" placeholder="Введите ваш пароль" class="password">
                 <input type="checkbox" class="main__checkbox" id="main__checkbox">
-                <label for="main__checkbox">
+                <label for="main__checkbox" class="main__label">
                     Запомнить меня на этом комьютере
                 </label>
                 <button type="submit" class="logo__form">Войти в личный кабинет</button>
