стили для отображения клиента, создание страницы доступа в программу

--- a/client.html
+++ b/client.html
@@ -59,8 +59,8 @@
                     <li><a href="#" class="nav__student">Учащиеся</a></li>
                     <li><a href="#" class="nav__lids">Лиды</a></li>
                     <li><a href="#" class="nav__contract">Абонименты</a></li>
-                    <li><a href="#" class="nav__add">Доступ в CRM</a></li>
-                    <li><a href="#" class="nav__exit">Выход</a></li>
+                    <li><a href="assecc.html" class="nav__add">Доступ в CRM</a></li>
+                    <li><a href="index.html" class="nav__exit">Выход</a></li>
                 </ul>
             </section>
             <!-- Основной рабочий раздел -->
@@ -110,22 +110,27 @@
                             <div class="wrapper-user">
                                 <div class="main__client">
                                     <p class="full__name">Пугко Ксения Викторовна</p>
-                                    <p>дата рождения <span>24.05.2003</span></p>
-                                    <p>Школа <span>Гимназия "Лаборатория Салахова"</span></p>
-                                    <p><span>Класс 6</span> <span>Смена 1</span></p>
-                                    <p class="phone__user"> +7912518245</p>
+                                    <p>Дата рождения <span class="data__birday">24.05.2003</span></p>
+                                    <p>Школа <span class="client__school">Гимназия "Лаборатория Салахова"</span></p>
+                                    <p class="client__change"><span>Класс 6</span> <span>Смена 1</span></p>
+                                    <p class="phone__user"><span class="phone"></span> +7912518245</p>
                                 </div>
                                 <div class="main__filiall">
-                                    <p>ул. Семена Билецкого 12/1</p>
-                                    <p>Тип договора <span>Платный</span></p>
+                                    <p class="client__filial"><span class="client__filial-icon"></span> ул. Семена
+                                        Билецкого 12/1</p>
+                                    <p>Тип договора <span class="client__filial-contract">Платный</span></p>
                                 </div>
                             </div>
                             <div class="wrapper__customer">
-                                <h3>Заказчик</h3>
-                                <p>Журавлева Анна Валерьевна</p>
-                                <p class="phone__user"> +7912518245</p><br>
-                                <p class="phone__user"> +7912518245</p><br>
-                                <button>Сохранить</button>
+                                <div class="text__customer">
+                                    <h3>Заказчик</h3>
+                                    <p>Журавлева Анна Валерьевна</p>
+                                    <p class="phone__user customer__phone"><span class="phone"></span> +7912518245</p>
+                                    <br>
+                                    <p class="phone__user customer__phone"><span class="phone"></span> +7912518245</p>
+                                    <br>
+                                </div>
+                                <button class="save__changes">Сохранить</button>
                             </div>
                         </div>
                     </div>
